--- a/assets/styles.css
+++ b/assets/styles.css
@@ -249,6 +249,9 @@ section {
   transform: translateY(-15px);
   box-shadow: 0px 15px 30px 0px rgb(0 0 0 / 70%);
 }
+.row img{
+  width: 50%;
+}
 
 .cta {
   background: #0b0b13;
